# hitakort

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pythonapp.yaml
hitakort/: __init__.py  _hitakort.py  _hitakortbot.py  bot.py  defaults.py  utils.py
